--- a/html-css/exercicios/ex009/index.html
+++ b/html-css/exercicios/ex009/index.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formatações Adicionais</title>
+    <title>Outras Formatações</title>
 </head>
 <body>
-    
+    <h1>Outras Formatações</h1>
+    <h2>Código-fonte e Pré-formatado</h2>
+    <p>O comando document.getElementbById("teste") é escrito em linguaguem JavaScript.</p>
+    <p>O comando <code>document.getElementbById("teste")</code> é escrito em linguaguem JavaScript.</p>
+    <pre>
+        <code>
+    num = (int(input('Digite um número'));
+    if num %2 == 0;
+        print(f'O número {num} é PAR')
+    else:
+        print(f'O número {num} é ÍMPAR')
+    print('Fim do programa')
+        </code>
+    </pre>
+    <h2>Citações</h2>
+        <p>Como diria o pai de um amigo: <q>o computador é um burro muito rápido</q></p>
+    <h2>Citações completas</h2>
+        <p>Segundo Lorem Ipsum:
+        <blockquote style="color: red ;" cite="https://www.lipsum.com/feed/html">
+            Lorem ipsum dolor sit amet, consectetur adipiscing 
+            elit. Donec mollis pharetra lorem mollis fermentum. 
+            Suspendisse id massa ligula. Aliquam elementum feugiat 
+            nisi. Suspendisse in gravida mi. In at lacus neque. 
+            Integer venenatis magna in ante lobortis, vel rhoncus 
+            justo fringilla. Nulla sagittis orci feugiat imperdiet 
+            suscipit.
+
+            Class aptent taciti sociosqu ad litora torquent per 
+            conubia nostra, per inceptos himenaeos. Vestibulum 
+            pellentesque purus vitae lacus tristique luctus. 
+            Nulla vitae tellus felis. Quisque aliquam, purus quis 
+            consectetur porta, augue purus placerat urna, varius 
+            placerat justo neque id dolor. Maecenas pulvinar eros 
+            id pulvinar efficitur. Ut vestibulum suscipit dui, 
+            quis dapibus lorem pharetra at. Fusce lorem tortor, 
+            varius nec lobortis quis, mollis et tortor. In fringilla 
+            purus non dictum cursus. Integer ante ipsum, aliquam 
+            vehicula felis sed, malesuada placerat dolor. Vivamus 
+            ipsum diam, faucibus a sem quis, sagittis luctus orci. 
+            In sit amet sem mollis, convallis dui sed, pharetra justo. 
+            Pellentesque habitant morbi tristique senectus et netus 
+            et malesuada fames ac turpis egestas. Morbi pharetra quam 
+            nec massa lacinia pulvinar.</p>
+        </blockquote>
+    <h2>Abreviações</h2>
+        <p>Estou estudando <abbr title="HyperText Markup">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>. Estou adorando!</p>
+    <h2>Texto invertido</h2>
+    <p><bdo dir="rtl">Estou aprendendo a criar coiss em HTML.</bdo></p>
 </body>
 </html>
