--- a/html-css/exercicios/ex009/index.html
+++ b/html-css/exercicios/ex009/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Listas</title>
 </head>
 <body>
-    
+    <h1>Trabalhando com listas</h1>
+        <h2>Listas Ordenadas</h2>
+            <ol type="a" start="4">
+                <li>Acordar</li>
+                <li>Ligar pro João</li>
+                <li>Tomar café</li>
+                <li>Escovar o dente</li>
+                <li>Ir para a faculdade</li>
+                <li>Almoçar</li>
+                <li>Ir para o trabalho</li>
+                <li>Voltar para casa</li>
+                <li>Jantar</li>
+                <li>Dormir</li>
+            </ol>
+        <h2>Lista não ordenadas</h2>
+            <ul type="circle"> <!--disc, circle, square-->
+                <li>Acordar</li>
+                <li>Ligar pro João</li>
+                <li>Tomar café</li>
+                <li>Escovar o dente</li>
+                <li>Ir para a faculdade</li>
+                <li>Almoçar</li>
+                <li>Ir para o trabalho</li>
+                <li>Voltar para casa</li>
+                <li>Jantar</li>
+                <li>Dormir</li> 
+            </ul>
 </body>
 </html>
