--- a/html-css/exercicios/ex009/index.html
+++ b/html-css/exercicios/ex009/index.html
@@ -34,5 +34,54 @@
                 <li>Jantar</li>
                 <li>Dormir</li> 
             </ul>
+        <h2>Juntando listas versão 1.0</h2>
+            <h3>Minhas linguagens favoritas</h3>
+                <ol>
+                    <li>Antigas</li>
+                    <ol type="a">
+                        <li>Clipper</li>
+                        <li>Visual Basic</li>
+                        <li>Fortran</li>
+                        <li>Delphi</li>
+                    </ol>
+                    <li>Novas</li>
+                        <ol type="a" start="5">
+                            <li>PHP</li>
+                            <li>Python</li>
+                            <li>Javascript</li>
+                            <li>Kotlin</li>
+                        </ol>
+                </ol>
+            <h3>Meus jogos favoritos</h3>
+                <ol>
+                    <li>NES</li>
+                    <ul type ="square">
+                        <li>Mario Bros</li>
+                        <ul type = "circle">
+                            <li>Mario Bros 3</li>
+                            <li>Mario: Lost Level</li>
+                        </ul>
+                        <li>Ninja Gaiden</li>
+                    </ul>
+                    <li>SNES</li>
+                    <ul type="square">
+                        <li>Mario</li>
+                        <li>Donkey Kong</li>
+                    </ul>
+                    <li>PlayStation</li>
+                    <ul type ="square">
+                        <li>Final Fantasy</li>
+                        <li>Castelvania</li>
+                    </ul>
+                </ol>
+        <h2>Lista de definições</h2>
+        <dl>
+            <dt>HTML</dt>
+            <dd>Linguagem de marcação para criação de conteúo de um site</dd>
+            <dt>CSS</dt>
+            <dd>Linguagem de marcação para criação do design de um site</dd>
+            <dt>JavaScript</dt>
+            <dd>Linguagem de programação para a criação de interatividade de um site</dd>
+        </dl>
 </body>
 </html>
