--- a/html-css/exercicios/ex010/index.html
+++ b/html-css/exercicios/ex010/index.html
@@ -13,5 +13,9 @@
     <h2>Usando links Internos</h2>
         <p>esta é a primeira página do site. Se quiser, você pode acessar também a minha <a href="pg002.html" rel="next">segunda página</a></p>
         <p>Você pode acessar nossa <a href="noticias/pag003.html" target="_self">página de notícias</a></p>
-</body>
+    <h1>Links para download</h1>
+        <ul>
+            <li><a href="livro/manual_brasao_ufsc_web.pdf" type="aplication/pdf" target="_blank">Baixar o livro em PDF</a></li>
+            <li><a href="livro/manual_brasao_ufsc_web.rar" type="aplication/rar">Baixar compactado em ZIP</a></li>
+        </ul>
 </html>
