--- a/html-css/desafios/d006/index.html
+++ b/html-css/desafios/d006/index.html
@@ -15,8 +15,8 @@
             <li><abbr title="Use a tag &lt;img&gt;">Imagens</abbr></li>
             <li><abbr title="Use a tag &lt;abbr&gt;">Abreviações</abbr></li>
             <li><abbr title="Use a tag &lt;code&gt;">Códigos-fonte</abbr></li>
-            <li><abbr title="Use a tag &lt;ol&gt; e &lt;/ol&gt"">Listas numeradas</abbr></li>
-            <li><abbr title="Use a tag &lt;ul&gt; e &lt;/ul&gt"">Listas com demarcadores</abbr></li>
+            <li><abbr title="Use a tag &lt;ol&gt;, &lt;/ol&gt; e &lt;li&gt;">Listas numeradas</abbr></li>
+            <li><abbr title="Use a tag &lt;ul&gt;, &lt;/ul&gt; e &lt;li&gt;">Listas com demarcadores</abbr></li>
         </ul>
     
 </body>
