--- a/html-css/exercicios/ex017/fontes.html
+++ b/html-css/exercicios/ex017/fontes.html
@@ -7,10 +7,16 @@
     <style>
         body {
             font-family: 'Courier New', Courier, monospace;
+            font-size: 1em;
+            /* 16 pixels normalmente é igual a 1em */
+            /* font-size:
+                        medidas absolutas: cm, mm, in (inchies), px, pt (ponto) pc (pica)
+                        medidas relativas: em (altura da letra "M"), ex (altura da letra "x"), rem (em relativo ao "EM" da fonte definina no body), vw (Viewport = relativo à largura da tela em %), vh (relativo à altura da tela em %), %
+                         */
         }
-        h1, h2 {
+        /* h1, h2 {
             font-family:'Times New Roman', Times, serif;
-        }
+        } */
     </style>
     <title>Fontes em CSS</title>
 </head>
