--- a/html-css/exercicios/ex019/index.html
+++ b/html-css/exercicios/ex019/index.html
@@ -10,18 +10,18 @@
 <body>
     <h1 id="principal">Criando Sites com HTML e CSS</h1>
     <h1>Aprendendo HTML</h1>
-        <h2>HTML básico</h2>
+        <h2 class="basico">HTML básico</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, beatae impedit culpa quas magni sapiente, in autem distinctio pariatur quisquam a ratione magnam, voluptatum ducimus exercitationem facere? Laborum, itaque quis?</p>
-        <h2>HTML intermediário</h2>
+        <h2 class="intermediario">HTML intermediário</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quos, consequatur velit beatae voluptatibus veniam vel vero tempore inventore quasi, dolor, ex est cupiditate et nam! Veritatis est ea consectetur?</p>
-        <h2>HTML avançado</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores consequuntur sed a iusto nam, facere soluta. At commodi maiores nisi! Ipsam voluptatibus obcaecati optio repellendus voluptatum nulla, amet eius recusandae!</p>
-    <h1>Aprendendo CSS</h1>
-        <h2>CSS básico</h2>
+        <h2 class="avancado">HTML avançado</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores consequuntur sed a iusto nam, facere soluta. At <spam class="basico">commodi maiores</spam> nisi! Ipsam voluptatibus obcaecati optio repellendus voluptatum nulla, amet eius recusandae!</p>
+    <h1 class="destaque">Aprendendo CSS</h1>
+        <h2 class="basico">CSS básico</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis adipisci explicabo beatae cupiditate, dicta illo, sit nulla pariatur at, laudantium nihil corporis laborum. Porro magni eius cum modi omnis. Corrupti.</p>
-        <h2>CSS intermediário</h2>
+        <h2 class="intermediario">CSS intermediário</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam atque iusto expedita delectus dolores. Sed, voluptatum totam. Repellat esse sapiente magni, veritatis ipsum, tenetur accusantium illo quos a molestias nam?</p>
-        <h2>CSS avançado</h2>
+        <h2 class="avancado destaque">CSS avançado</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem impedit non, voluptatem molestiae, commodi ea quae laborum inventore suscipit quidem minima ratione. Neque eveniet iusto, tempora modi architecto molestias consectetur.</p>
 </body>
 </html>
