--- a/html-css/exercicios/ex021/index.html
+++ b/html-css/exercicios/ex021/index.html
@@ -6,22 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelos de caixa</title>
     <style>
-        h1 {
+        h1 { 
+            /* display: inline; */
             background-color: lightgrey;
             height: 300px;
             width: 300px;
-            border-width: 10px;
+
+            /* border-width: 10px;
             border-style: solid;
-            border-color: darkslategray;
-            padding-top: 10px;
+            border-color: darkslategray; */
+
+            /* shorthand: */
+            border: 10px solid darkslategray;
+            
+            /* padding-top: 10px;
             padding-right: 10px;
             padding-bottom: 10px;
-            padding-left: 10px;
+            padding-left: 10px; */
+
+            /* padding: 10px 10px 10px 10px; */
+
+            padding: 10px;
+
+
+            margin: 20px auto 40px;
+            
+            /* outline-width: 5px;
+            outline-style: dashed;
+            outline-color: blueviolet; */
+
+            outline: 5px dashed blueviolet;
+
+
         }
         a {
-            border-width: 10px;
+            display: inline-block;
+            border-width: 5px;
             border-style: solid;
             border-color: red;
+
+            margin: 10px;
+            padding: 10px;
         }
     </style>
 </head>
