--- a/html-css/exercicios/ex021/caixa02.html
+++ b/html-css/exercicios/ex021/caixa02.html
@@ -23,6 +23,7 @@
     nav {
         background-color: grey;
         padding: 3px;
+        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.623);
     }
     nav > a {
         text-decoration: none;
@@ -50,6 +51,11 @@
         text-align: center;
         padding: 1px;
         margin: 0px;
+    }
+    footer > a {
+        text-decoration: none;
+        color: white;
+        font-size: 13px;
     }
 </style>
 
@@ -84,7 +90,7 @@
     </main>
 
     <footer>
-        <p>Desenvolvido por Felipe Franke</p>
+        <a href="#" target="_blank">Desenvolvido por Felipe Franke</a>
     </footer>
 
 </body>
