--- a/html-css/exercicios/ex021/caixa02.html
+++ b/html-css/exercicios/ex021/caixa02.html
@@ -38,6 +38,8 @@
         background-color: white;
         padding: 10px;
         margin: 10px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 5px #00000085;
     }
     article {
         background-color: lightgrey;
@@ -56,6 +58,18 @@
         text-decoration: none;
         color: white;
         font-size: 13px;
+    }
+    div#bola {
+        height: 100px;
+        width: 100px;
+        background-color: white;
+        margin: 10px;
+        border-radius: 50%;
+    }
+    div#bola > img {
+        border-radius: 50%;
+        width: 100px;
+        margin: auto;
     }
 </style>
 
@@ -92,6 +106,10 @@
     <footer>
         <a href="#" target="_blank">Desenvolvido por Felipe Franke</a>
     </footer>
+    <div id="bola">
+        <img src="img/foto.png" alt="img/png">
+    </div>
+
 
 </body>
 </html>
