--- a/html-css/desafios/d010/index.html
+++ b/html-css/desafios/d010/index.html
@@ -89,7 +89,7 @@
                         </table>
                         <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
 
-                        <p>Acesse aqui o site <a href="#">Android <i class="fa-solid fa-link"></i></a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                        <p>Acesse aqui o site <a href="http://www.android.com/intl/en_uk/history/#/donut" target="_blank">Android <i class="fa-solid fa-link"></i></a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
                     </article>
                 
                 <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.</p>
