--- a/html-css/desafios/d010/index.html
+++ b/html-css/desafios/d010/index.html
@@ -45,8 +45,8 @@
                     <picture class="bugdroid"><img src="img/bugdroid.png" alt="Bugdroid"></picture>
             
                     <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
-                    <section id= iframes>
-                        <iframe width="100%" height= "100%"  src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <section class="iframes">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </section>
                     <aside>
                         <h2>Quer aprender mais?</h2>
