--- a/html-css/desafios/d012/index.html
+++ b/html-css/desafios/d012/index.html
@@ -13,8 +13,84 @@
             <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
     <main>
-        
+        <section class="estrofe">
+                <p>Estou ficando cansado</p>
+                <p>Da tal tecnologia</p>
+                <p>Só se fala por e-mail</p>
+                <p>Mensagem curta e fria</p>
+                <p>Twitter e Facebook</p>
+                <p>Antes que eu caduque</p>
+                <p>Vou dizer tudo em poesia.</p>
+        </section>
+        <section class="imagem01 estrofe-img">
+            <div class="box-imagem">
+                <p>Não é mais como era antes</p>
+                <p>É tudo abreviado</p>
+                <p>"Você" só tem duas letras</p>
+                <p>O "O" e o "E" foi riscado</p>
+                <p>Para declarar o amor</p>
+                <p>Basta botar uma flor</p>
+                <p>E um coração desenhado.</p>
+            </div>
+        </section>
+        <section>
+            <div class="estrofe">
+                <div class="divisao">
+                    <p>Não é mais como era antes</p>
+                    <p>É tudo abreviado</p>
+                    <p>"Você" só tem duas letras</p>
+                    <p>O "O" e o "E" foi riscado</p>
+                    <p>Para declarar o amor</p>
+                    <p>Basta botar uma flor</p>
+                    <p>E um coração desenhado.</p>
+                </div>
+                <div>
+                    <p>Arroba agora não pesa</p>
+                    <p>É parte de um endereço</p>
+                    <p>Ponto final nem se usa</p>
+                    <p>Ou vai até no começo</p>
+                    <p>Agora é .com</p>
+                    <p>Se o saite é muito bom</p>
+                    <p>Ele vale um alto preço.</p>
+                </div>
+            </div>
+        </section>
+        <section class="imagem02 estrofe-img">
+            <div class="box-imagem">
+                <p>Tenho saudade das cartas</p>
+                <p>Escritas com a própria mão</p>
+                <p>Mandava no mês de Junho</p>
+                <p>Só chegava no Verão</p>
+                <p>Mas matava a saudade</p>
+                <p>Era texto de verdade</p>
+                <p>Nas linhas do coração.</p>
+            </div>
+        </section>
+        <section class="estrofe">
+            <div>
+                <div class="divisao">
+                    <p>Agora, escrevo e envio</p>
+                    <p>Chegando na mesma hora</p>
+                    <p>Mas quando vou prosear</p>
+                    <p>A pessoa foi embora</p>
+                    <p>Abriu outro aplicativo</p>
+                    <p>O mundo ficou cativo</p>
+                    <p>Da tecnologia do agora.</p>
+                </div>
+                <div>
+                    <p>Felizmente, pra orar</p>
+                    <p>Não precisa de internet</p>
+                    <p>Deus escuta todo mundo</p>
+                    <p>Se quiser, faça esse teste</p>
+                    <p>Dois pontos são dois joelhos</p>
+                    <p>Seus lábios são aparelhos</p>
+                    <p>Deixe que Deus interprete.</p>
+                </div>
+            </div>
+        </section>
     </main>
-
+    <footer>
+        <p>Criado por <a href="https://github.com/felipefranke" target="_blank">Felipe Franke</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
+    </footer>
 </body>
 </html>
