--- a/html-css/desafios/d012/index.html
+++ b/html-css/desafios/d012/index.html
@@ -90,7 +90,7 @@
         </section>
     </main>
     <footer>
-        <p>Criado por <a href="https://github.com/felipefranke" target="_blank">Felipe Franke</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
+        <p>Criado por <a href="https://github.com/felipefranke" target="_blank">FKDevs</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
